2013-08-05 Zoltan Tuza <zoltuz@zoltuz-laptop>
	* core/txtl_runsim.m: version detection to switch off AbsoluteToleranceScaling in >=Matlab 8.0v (without that the ODE solver fails with the current model) 

2013-07-30 Zoltan Tuza <zoltuz@zoltuz-laptop>
	* core/findspecies.m: complete code refactoring, multicompartment compatibility
	* core/txtl_addspecies.m: major code refactoring, multicompartment spcesies adding.
	* examples/geneexpr_vesicule.m: first cut for vesicule based simulations.
	* core/txtl_enzyme_resource_degradation.m: enzyme and resource related degradations are moved here for txtl_runsim.
	* auxiliary/: new aux functions, see svn commit for further information.
2013-07-17 Zoltan Tuza <zoltuz@zoltuz-laptop>
	* config/: new folder for extract config files
2013-07-15 Zoltan Tuza <zoltuz@zoltuz-laptop>
	* core/txtl_setup_default_basepair_length.m: buxfig in indexing
2013-07-11 Zoltan Tuza <zoltuz@zoltuz-laptop>
	* components/txtl_protein_lacI.m: inducer degradation has been removed
	* core/txtl_setup_new_protein_added.m: cross check function, this function maintains integrity of reactions if a protein manually added to the TXTL reaction. 
2013-07-09 Zoltan Tuza <zoltuz@zoltuz-laptop>
	* core/txtl_mrna_degradation.m: separate file for mRNA degrations reactions, mainly to keep the code maintainable
	* core/txtl_plot_gui.m: bugfix
2013-06-24 Zoltan Tuza <zoltuz@zoltuz-laptop>
	* aux/: this folder is renamed to auxiliary due to compatibility issues with Windows
2013-06-17 Zoltan Tuza <zoltuz@zoltuz-laptop>
	* examples/*: configobj migrated to run_sim, simulation time has to be given, option for configobj.
	* core/txtl_plot.m: default dataGroups cellarray for easier plotting
	* aux/expression_endtime.m: new aux function for calculating expression and time and rate (expression_rate.m)

2013-05-20  Zoltan Tuza <zoltuz@zoltuz-laptop>