@@ -10,10 +10,13 @@ Contents:
   aux/ - auxiliary function
   components/ - component models
   core/ - core functionality
+  data/ - default directory for wetlab experiment data
   doc/ - toolbox documentation
   examples/ - examples that use the toolbox
   models/ - (obsolete) old directory structure.  To be deleted.
+  modules/ - additional modules to the toolbox (e.g. parameter estimation)
   tests/ - unit tests
+  tmp/ - temporarily stored filled (mostly script generated) 
   txtl_init.m - script to initalize toolbox (mainly setting up the path)
   unused/ - old files that are no longer used and scheduled to be deleted
 
