@@ -1,3 +1,8 @@
+% finds a string match (based on strcmp) in a string list and gives back
+% its position(s) in the list.
+% input: list of string, string of interest  
+% output: all the exact matches' index
+
 function indexList = findStringInAList (list,string)
 
  if ~isempty(list) && ~isempty(string)
